--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <div class="tabs">
         <div class="tabs__nav">
-            <button class="tabs__nav-btn  active" type="button" data-tab="#tab_1">Tab 1</button>
+            <button class="tabs__nav-btn" type="button" data-tab="#tab_1">Tab 1</button>
             <button class="tabs__nav-btn" type="button" data-tab="#tab_2">Tab 2</button>
             <button class="tabs__nav-btn" type="button" data-tab="#tab_3">Tab 3</button>
         </div>
         <div class="tabs__content">
-            <div class="tabs__item  active" id="tab_1">
+            <div class="tabs__item" id="tab_1">
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
             </div>
 
